Flavour event for Russia about Kolchak's death

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -402,6 +402,10 @@ tram.100.a:0 "Wojciechowski is the best choice for us"
 tram.101.t:0 "The Japanese are trying to remove Wojciechowski!"
 tram.101.d:0 "The Japanese believe Wojciechowski has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with someone more useful."
 
+tram.102.t:0 "Admiral Kolchak was killed"
+tram.102.d:0 "The leader of 1925 coup, rogue admiral Alexandr Kolchak was recently killed by his own soldiers during the military coup in his belowed Transamur state. A man of great ambitions, he had contested our rights to rule the Russian Republic until his last breath. With his death, our society become a bit more pacified."
+tram.102.a:0 "So, the bastard is gone. Excellent!"
+
 ### Parties ###
 TRM_totalist_party:0 "FETP"
 TRM_radical_socialist_party:0 "TSP"
