Fengtian events and localization

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -85,7 +85,7 @@ FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
 FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
 FNG_SILVER_RESERVE_FULL:0 "Silver Reserve Full"
 
-### Focuses ###
+### Foci ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
 FNG_Preservation_of_the_Xinhai_Order_desc:0 "Ironically, Fengtian is the sole national government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although its republican commitments are questionable, and Southern reclamation is currently unrealistic, the government has loudly advocated both goals, as they foster domestic legitimacy."
 FNG_Fuguo_Qiangbing:0 "Fuguo Qiangbing"
@@ -586,7 +586,7 @@ fengtian.new.41.d:0 "The third and final Hiroshima Package has arrived, containi
 fengtian.new.41.a:0 "Good"
 #Soy Agricultural Initiative
 fengtian.new.42.t:0 "The Soy Agricultural Initiative"
-fengtian.new.42.d:0 "Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits."
+fengtian.new.42.d:0 ""Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
 fengtian.new.42.a:0 "Back the Initiative"
 fengtian.new.42.b:0 "We need no more soy"
 fengtian.new.43.t:0 "Japan and Korea Struggle with Drought"
@@ -753,7 +753,7 @@ fengtian.new.78.a:0 "We have no choice"
 fengtian.new.78.b:0 "Let there be war!"
 
 fengtian.new.79.t:0 "Wu Wang Zai Ju"
-fengtian.new.79.d:0 "The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and subjugating her people. \n\n It is thus that we find ourselves in the North as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are ‘digging a hole to die in’. To this I say ‘Forget not what happened in Ju’! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
+fengtian.new.79.d:0 "The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are ‘digging a hole to die in’. To this I say ‘Forget not what happened in Ju’! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
 fengtian.new.79.a:0 "Wansui!"
 
 fengtian.new.80.t:0 "Retaking Chahar"
@@ -774,73 +774,76 @@ fengtian.new.83.t:0 "Golden Dragon Cigarettes"
 fengtian.new.83.d:0 "The necessary preparations have been made, and production will soon begin. Judging by a telegraph message sent from Shanghai, Doihara intends to inform us of his progress over time."
 fengtian.new.83.a:0 "Good"
 
-fengtian.new.84.t:0 "-"
-fengtian.new.84.d:0 "-"
-fengtian.new.84.a:0 "-"
+fengtian.new.84.t:0 "Delays in Doihara's Plans"
+fengtian.new.84.d:0 "INSERT"
+fengtian.new.84.a:0 "Unfortunate"
+fengtian.new.94.b:0 "We've had enough"
 
-fengtian.new.85.t:0 "-"
-fengtian.new.85.d:0 "-"
-fengtian.new.85.a:0 "-"
+fengtian.new.85.t:0 "Further Delays"
+fengtian.new.85.d:0 "INSERT"
+fengtian.new.85.a:0 "Unfortunate"
+fengtian.new.85.b:0 "We've had enough"
 
-fengtian.new.86.t:0 "-"
-fengtian.new.86.d:0 "-"
-fengtian.new.86.a:0 "-"
+fengtian.new.86.t:0 "Doihara has Succeeded"
+fengtian.new.86.d:0 "INSERT"
+fengtian.new.86.a:0 "Excellent"
 
-fengtian.new.87.t:0 "-"
-fengtian.new.87.d:0 "-"
-fengtian.new.87.a:0 "-"
+fengtian.new.87.t:0 "Discovery and Failure"
+fengtian.new.87.d:0 "INSERT"
+fengtian.new.87.a:0 "Damn!"
 
-fengtian.new.88.t:0 "-"
-fengtian.new.88.d:0 "-"
-fengtian.new.88.a:0 "-"
+fengtian.new.88.t:0 "Doihara's Fate"
+fengtian.new.88.d:0 "INSERT"
+fengtian.new.88.a:0 "So be it"
 
-fengtian.new.89.t:0 "-"
-fengtian.new.89.d:0 "-"
-fengtian.new.89.a:0 "-"
+fengtian.new.89.t:0 "Opium Addiction Spreads in Qing"
+fengtian.new.89.d:0 "INSERT"
+fengtian.new.89.a:0 "Unfortunate but necessary"
 
-fengtian.new.90.t:0 "-"
-fengtian.new.90.d:0 "-"
-fengtian.new.90.a:0 "-"
+fengtian.new.90.t:0 "The Propaganda War"
+fengtian.new.90.d:0 "INSERT"
+fengtian.new.90.d_mantetsu:0 "INSERT"
+fengtian.new.90.a:0 "Southern reclamation is inevitable!"
 
-fengtian.new.91.t:0 "-"
-fengtian.new.91.d:0 "-"
-fengtian.new.91.a:0 "-"
+fengtian.new.91.t:0 ""
+fengtian.new.91.d:0 ""
+fengtian.new.91.a:0 ""
 
-fengtian.new.92.t:0 "-"
-fengtian.new.92.d:0 "-"
-fengtian.new.92.a:0 "-"
+fengtian.new.92.t:0 ""
+fengtian.new.92.d:0 ""
+fengtian.new.92.a:0 ""
 
-fengtian.new.93.t:0 "-"
-fengtian.new.93.d:0 "-"
-fengtian.new.93.a:0 "-"
+fengtian.new.93.t:0 ""
+fengtian.new.93.d:0 ""
+fengtian.new.93.a:0 ""
 
-fengtian.new.94.t:0 "-"
-fengtian.new.94.d:0 "-"
-fengtian.new.94.a:0 "-"
+fengtian.new.94.t:0 ""
+fengtian.new.94.d:0 ""
+fengtian.new.94.a:0 ""
 
-fengtian.new.95.t:0 "-"
-fengtian.new.95.d:0 "-"
-fengtian.new.95.a:0 "-"
+fengtian.new.95.t:0 ""
+fengtian.new.95.d:0 ""
+fengtian.new.95.a:0 ""
 
-fengtian.new.96.t:0 "-"
-fengtian.new.96.d:0 "-"
-fengtian.new.96.a:0 "-"
+fengtian.new.96.t:0 ""
+fengtian.new.96.d:0 ""
+fengtian.new.96.a:0 ""
 
-fengtian.new.97.t:0 "-"
-fengtian.new.97.d:0 "-"
-fengtian.new.97.a:0 "-"
+fengtian.new.97.t:0 ""
+fengtian.new.97.d:0 ""
+fengtian.new.97.a:0 ""
 
-fengtian.new.98.t:0 "-"
-fengtian.new.98.d:0 "-"
-fengtian.new.98.a:0 "-"
+fengtian.new.98.t:0 ""
+fengtian.new.98.d:0 ""
+fengtian.new.98.a:0 ""
 
-fengtian.new.99.t:0 "-"
-fengtian.new.99.d:0 "-"
-fengtian.new.99.a:0 "-"
+fengtian.new.99.t:0 ""
+fengtian.new.99.d:0 ""
+fengtian.new.99.a:0 ""
 
-fengtian.new.100.t:0 "-"
-fengtian.new.100.d:0 "-"
-fengtian.new.100.a:0 "-"
+fengtian.new.100.t:0 ""
+fengtian.new.100.d:0 ""
+fengtian.new.100.a:0 ""
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
