--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -607,6 +607,22 @@ annex.155.c:0 "Take control of Greenland and liberate Iceland"
 annex.155.e:0 "Only liberate Iceland and leave Denmark with Greenland"
 annex.156.t:0 "Fate of Portugal"
 annex.156.d:0 "Portugal is under our control, but perhaps the Portuguese would be better off governing themselves?"
+annex.157.t:0 "The French are defeated"
+annex.157.d:0 "Paris has been captured and the French have been defeated. We have ripped out the heart of the Revolution and now we must decide what to with occupied France."
+annex.157.a:0 "Set up a French Puppet Government."
+annex.157.b:0 "Partition the French Mainland!"
+annex.157.c:0 "Liberate Normandy, Bretagne and France."
+annex.157.e:0 "Total conquest is preferable."
+annex.158.t:0 "Fate of Southern France"
+annex.158.d:0 "We now control the southern half of France, the north is out of reach but we still need to find a way to control that region more efficiently."
+annex.158.a:0 "Set up a French Puppet Government."
+annex.158.b:0 "Liberate Occitania."
+annex.158.c:0 "Occupying the region is for the best."
+annex.159.t:0 "The Partitioning of Britain"
+annex.159.d:0 "After defeating the Union of Britain we now control Great Britain. We can partition these lands and create new countries with loyal governments or create an united Great Britain."
+annex.159.a:0 "Divide the island between England, Scotland and Wales."
+annex.159.b:0 "Create a loyal Britain."
+annex.159.c:0 "Occupy everything!"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
