Flavor events for the Grand Duke Dmitri Romanov

--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -287,6 +287,8 @@ rus_sav_econ:0 "Economy for the army"
 rus_sav_econ_desc:0 "Though Savinkov's government started to revive our economy, but the military factories get more attention than the others. Many people are not satisfied with such a policy."
 rus_sav_econ1:0 "Nation and Army stay together!"
 rus_sav_econ1_desc:0 "We could finally reorganize our economy, including the civil industry, but the stabilization of the economy will take some time."
+RUS_Vroom:0 "Limousine 'Triumph'"
+RUS_Dmi_Tri:0 "Dmitri Romanov controls the Senate"
 
 ### Parties ###
 RUS_totalist_party:0 "NOP"
