Changes as requested by PPSyrius, unite both PHL news events and new news event for BUR syndicalist coup

--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -61,28 +61,18 @@ syndicalist_asia:0 "Eastern Syndicalist Union"
 phil.0.t:0 "A Path Towards Independence"
 phil.0.d:0 "The Philippines were a Spanish colony until late 1898, when the United States claimed them as a war prize from Spain. Years of violent struggle for independence followed, and as the economic and political crisis in America began to worsen, they finally bore fruit. In 1934, The Tydings-McDuffie Act was passed, creating the Commonwealth of the Philippines with an elected government under Manuel Quezon and a constitution based upon that of the United States, while Washington retained control of the country's foreign affairs and military. More importantly, it stipulated that after ten years of transition, the archipelago would become a fully independent republic. But storm clouds are gathering over America. Will the Philippines achieve independence sooner than expected, and will that lead to them becoming prey for yet another major empire? Only time will tell..."
 phil.0.a:0 "Viva la Filipinas!"
-phil.1.t:0 "Syndicalist uprising in Manilla"
-phil.1.d:0 "As we have peacefully achieved independence from the United States due to their chaotic Civil War, our young Commonwealth is already facing the dangers of syndicalism. Inspired by both the Combined Syndicates' uprising in America and by the Bharatiya Commune in India, a group of disgruntled army officers have ordered their units to march towards our capital, where they have joined forces with bands of peasants and industrial workers. They are planning to establish a socialist republic on our archipelago!"
-phil.1.a:0 "Rebels seize the capital and prepare to establish a syndicalist regime"
+phil.1.t:0 "Syndicalist Uprising in Manilla"
+phil.1.d:0 "As we have peacefully achieved independence from the United States due to their chaotic Civil War, our young Commonwealth is already facing the dangers of syndicalism. Inspired by both the Combined Syndicates' uprising in America and by the Bharatiya Commune in India, a group of disgruntled army officers have ordered their units to march towards our capital, where they have joined forces with bands of peasants and industrial workers. They are planning to establish a Syndicalist state on our archipelago!"
+phil.1.a:0 "Rebels seize the capital and prepare to establish a Syndicalist regime"
 phil.1.b:0 "Order our forces to resist the uprising"
-phil.2.t:0 "A counter-coup?"
-phil.2.d:0 "Despite the syndicalist-sympathising units seizing most of downtown Manilla, most of the armed forces are still siding with the legal government. Will they join the revolutionaries?"
+phil.2.t:0 "The Army Counter-Coup"
+phil.2.d:0 "Despite the Syndicalist-sympathising units seizing most of downtown Manilla, most of the armed forces are still currently siding with the legal government. Will they join the revolutionaries?"
 phil.2.a:0 "The army joins the rebels and the government is toppled"
-phil.2.b:0 "Loyal units storm the capital and evict the syndicalists"
-phil.3.t:0 "II Himagsikang Pilipino"
-phil.3.d:0 "The filipino armed forces have declared their loyalty to the new government and a socialist republic has been declared. This is the ushering of a new era for the Philippines!"
-phil.3.a:0 "Viva Rebolusyon!"
-phil.3.b:0 "That's Worrying!"
-phil.3.c:0 "Viva Rebolusyon!"
+phil.2.b:0 "Loyal units storm the capital and evict the Syndicalists"
 phil.4.t:0 "The Revolution is Defeated"
-phil.4.d:0 "As the armed forces declared their support for our government, the rebellious units quickly lost support. After one of our generals drove an armoured column towards downtown Manilla, the syndicalists officially surrendered, ending the threat of a left-wing coup in our country. With the army occupying key points in the city, however, a new menace looms over the horizon - there are talks that the military may attempt to take the chance to seize power for themselves and establish a dictatorship of their own..."
+phil.4.d:0 "As the armed forces declared their support for our government, the rebellious units quickly lost support. After one of our generals drove an armoured column towards downtown Manilla, the syndicalists officially surrendered, ending the threat of a Syndicalist coup in our country. With the army occupying key points in the city, however, a new menace looms over the horizon, there are talks that the military may attempt to take the chance to seize power for themselves and establish a dictatorship of their own."
 phil.4.a:0 "The army restores the legal government to power"
 phil.4.b:0 "A military dictatorship is established"
-phil.5.t:0 "Democracy prevails"
-phil.5.d:0 "As the armed forces declared their support for the old Filipino government, the rebellious units quickly lost support. After one of their generals drove an armoured column towards downtown Manilla, the syndicalists officially surrendered, ending the threat of a left-wing coup in the Philippines once and for all."
-phil.5.a:0 "Great!"
-phil.5.b:0 "And shall it be!"
-phil.5.c:0 "Such a pity..."
 phil.6.t:0 "Economical crisis approaching"
 phil.6.d:0 "Following the loss of the American protection due to their civil war, our country has lost a great source of income and our economy is nearing a crisis. Our politicians have come up with several plans, which involve increasing our industrial capacity, moving our economy with an expansion of our armed forces, or developing our mining and forestry sectors. Which shall we choose?"
 phil.6.a:0 "Expand our armed forces, this will move our economy"
