--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -431,6 +431,31 @@ worldnews.57.d:0 "Dissatisfaction with the lack of popular involvement in govern
 worldnews.57.a:0 "Syndicalist riots? Let us keep a firm eye on the Burmese."
 worldnews.57.b:0 "The Revolution spreads from the Indian workers to the Burmese workers."
 
+worldnews.58.t:0 "Democracy Prevails in the Philippines"
+worldnews.58.d:0 "Having just achieved independence from the United States, the Philippines faced today perhaps one of the most serious challenges any new country could face. Inspired by the Combined States of America and the Bharatiya Commune, disgruntled army officers marched on Manila to support rebelling peasants and workers.\n\nLuckily, their attempt was quickly twarted as loyalists units in the army reaffirmed their support for and intervened in favor of the legitimate, democratic Filipino government and drove the rebellious army out of the capital, ending the threat of a Syndicalist coup before it could even hatch."
+worldnews.58.a:0 "The Filipino people are above petty army coups and rebellions!"
+worldnews.58.b:0 "We are relieved to learn that democracy prevailed in the Philippines."
+worldnews.58.c:0 "The 'Democratic' leaders happily let the army rout protesting workers."
+
+worldnews.59.t:0 "The Army Takes Power in the Philippines"
+worldnews.59.d:0 "Having just achieved independence from the United States, the Philippines faced today perhaps one of the most serious challenges any new country could face. Inspired by the Combined States of America and the Bharatiya Commune, disgruntled army officers marched on Manila to support rebelling peasants and workers.\n\nLuckily, their attempt was quickly twarted as army units intervened in and drove the rebellious army out of the capital and many key points. However, the army decided to seize the power for themselves, with a cabinet of military commanders put in place to ensure the safety of the Philippines 'for the foreseeable future'."
+worldnews.59.a:0 "The Filipino army will not let our country succumb to the Syndicalist menace!"
+worldnews.59.b:0 "The loss of a democracy is a hefty price, but we can sympathise with them."
+worldnews.59.c:0 "The reactionaries spared no zeal to crush the workers with tanks!"
+worldnews.59.e:0 "The Filipino army will give this liberal island the leadership it needs."
+
+worldnews.60.t:0 "Syndicalism Spreads to the Philippines"
+worldnews.60.d:0 "Having just achieved independence from the United States, the Philippines faced today perhaps one of the most serious challenges any new country could face. Inspired by the Combined States of America and the Bharatiya Commune, disgruntled army officers marched on Manila to support rebelling peasants and workers.\n\nSadly, it seems the army's support for Syndicalism was more widespread then expected, and the army rapidly declared support for the Syndicalist movement. Now left with no army outside of a few loyalist divisions and not wanting to see the archipelago descend into another bloody civil war, the government signed power over to the Syndicalist movement's leader."
+worldnews.60.a:0 "The Filipino people have had enough of the Imperialists and Reactionaries."
+worldnews.60.b:0 "So, even regular armies support Syndicalism now? This is terrifying."
+worldnews.60.c:0 "We admire the decision of the Filipino army, true allies of the worker."
+
+worldnews.61.t:0 "Syndicalism Spreads to Burma"
+worldnews.61.d:0 "The situation of the restored Kingdom of Burma had long been precarious, even after British loyalists and Chinese citizens both vanished from its political scene. Heavily influenced by the neighbouring Bharatiya Commune's Syndicalist ideology, protests had rised in 1936 at the Rangoon University, planting the seeds of chaos.\n\nFollowing a string of poor decisions by the Burmese government, culminating in ordering the Royal Burmese Army to open fire on protesting students and workers, the entire country turned against the royalty. The newly founded National Council is now founding a new Syndicalist government and is reportedly already considering looking outwards for strong, like-minded allies."
+worldnews.61.a:0 "Only tyrants would dare order opening fire on protesters. Tyrants rule us no more!"
+worldnews.61.b:0 "Asking soldiers to open fire on their own countrymen was very shortsighted."
+worldnews.61.c:0 "It seems the Burmese soldiers finally stood up to their reactionary government."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 "-"
@@ -481,18 +506,6 @@ worldnews.256.b:0 "We are on your tail, Long. You will suffer the worker's wrath
 worldnews.256.c:0 "With such a victory on the Reactionary traitors, the Syndicate will soon be upon us."
 worldnews.256.e:0 "This is extremely concerning. We need to intervene soon, or else."
 worldnews.256.f:0 "Atlanta will descend into anarchy with those Syndicate militias rampaging through it."
-
-### Events From PHL ###
-# This needs to be reviewed later
-
-phil.92.t:0 "Syndicalist uprising in Manila"
-phil.92.d:0 "As the Philippines have peacefully achieved independence from the United States due to the chaotic US Civil War, their young Commonwealth is already facing the dangers of Syndicalism. Inspired by both the Combined Syndicates' uprising in America and by the Bharatiya Commune in India, a group of disgruntled army officers have ordered their units to march towards Manila, where they have joined forces with bands of peasants and industrial workers.\n\nThey say they are planning to establish a Socialist Republic on the Philippines archipelago!"
-phil.92.a:0 "That's unexpected"
-
-phil.93.d:0 "As the armed forces declared their support for the old Filipino government, the rebellious units quickly lost support. After one of their generals drove an armoured column towards downtown Manilla, the syndicalists officially surrendered, ending the threat of a left-wing coup in the Philippines once and for all. With the military occupying key points in the city, they decided to seize the power for themselves and establish 'Komisyong Tagapagpaganap ng Pilipinas', an emergency cabinet mostly made of Military commanders to ensure the safety of the Philippines for the unforeseeable future...."
-phil.93.a:0 "An acceptable sacrifice"
-phil.93.b:0 "Another Red threat vanishes!"
-phil.93.c:0 "Damn those imperialists!"
 
 ### Ethiopian Civil War ###
 
