who even needs sleep anyways, ministers are more important

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -4392,9 +4392,9 @@
 	 BEL_Jules_Pire_for_sde:0 "Jules Pire"
 	 Jules_Pire_dead:0 " is incapable of holding any posts."
 	 Jules_Pire_for_fired:0 " is incapable of holding this post."
-	 BEL_Louis_de_BrouckAre_for_sde:0 "Louis de BrouckÃ¨re"
-	 Louis_de_BrouckAre_dead:0 " is incapable of holding any posts."
-	 Louis_de_BrouckAre_for_fired:0 " is incapable of holding this post."
+	 BEL_Louis_de_Brouckere_for_sde:0 "Louis de Brouckère"
+	 Louis_de_Brouckere_dead:0 " is incapable of holding any posts."
+	 Louis_de_Brouckere_for_fired:0 " is incapable of holding this post."
 	 BEL_Eugene_Soudan_for_sli:0 "Eugène Soudan"
 	 Eugene_Soudan_dead:0 " is incapable of holding any posts."
 	 Eugene_Soudan_for_fired:0 " is incapable of holding this post."
@@ -4517,9 +4517,9 @@
 	 BEL_Albert_de_Vleeschauwer_eco_sco:0 "Albert de Vleeschauwer"
 	 Albert_de_Vleeschauwer_dead:0 " is incapable of holding any posts."
 	 Albert_de_Vleeschauwer_eco_fired:0 " is incapable of holding this post."
-	 BEL_Charles_RAgnier_eco_sco:0 "Charles RÃ©gnier"
-	 Charles_RAgnier_dead:0 " is incapable of holding any posts."
-	 Charles_RAgnier_eco_fired:0 " is incapable of holding this post."
+	 BEL_Charles_Regnier_eco_sco:0 "Charles Régnier"
+	 Charles_Regnier_dead:0 " is incapable of holding any posts."
+	 Charles_Regnier_eco_fired:0 " is incapable of holding this post."
 	 BEL_Cyriel_Van_Overbergh_eco_sco:0 "Cyriel Van Overbergh"
 	 Cyriel_Van_Overbergh_dead:0 " is incapable of holding any posts."
 	 Cyriel_Van_Overbergh_eco_fired:0 " is incapable of holding this post."
@@ -4642,9 +4642,9 @@
 	 BEL_Charles_du_Bus_de_Warnaffe_sec_sco:0 "Charles du Bus de Warnaffe"
 	 Charles_du_Bus_de_Warnaffe_dead:0 " is incapable of holding any posts."
 	 Charles_du_Bus_de_Warnaffe_sec_fired:0 " is incapable of holding this post."
-	 BEL_FranAois_Bovesse_sec_sco:0 "FranÃ§ois Bovesse"
-	 FranAois_Bovesse_dead:0 " is incapable of holding any posts."
-	 FranAois_Bovesse_sec_fired:0 " is incapable of holding this post."
+	 BEL_Francois_Bovesse_sec_sco:0 "François Bovesse"
+	 Francois_Bovesse_dead:0 " is incapable of holding any posts."
+	 Francois_Bovesse_sec_fired:0 " is incapable of holding this post."
 	 BEL_Jean_Rey_sec_sco:0 "Jean Rey"
 	 Jean_Rey_dead:0 " is incapable of holding any posts."
 	 Jean_Rey_sec_fired:0 " is incapable of holding this post."
@@ -4704,12 +4704,12 @@
 	 BEL_Henri_Denis_int_mli:0 "Henri Denis"
 	 Henri_Denis_dead:0 " is incapable of holding any posts."
 	 Henri_Denis_int_fired:0 " is incapable of holding this post."
-	 BEL_LAon_Delsinne_int_mli:0 "LÃ©on Delsinne"
-	 LAon_Delsinne_dead:0 " is incapable of holding any posts."
-	 LAon_Delsinne_int_fired:0 " is incapable of holding this post."
-	 BEL_LAon_Mundeleer_int_mli:0 "LÃ©on Mundeleer"
-	 LAon_Mundeleer_dead:0 " is incapable of holding any posts."
-	 LAon_Mundeleer_int_fired:0 " is incapable of holding this post."
+	 BEL_Leon_Delsinne_int_mli:0 "Léon Delsinne"
+	 Leon_Delsinne_dead:0 " is incapable of holding any posts."
+	 Leon_Delsinne_int_fired:0 " is incapable of holding this post."
+	 BEL_Leon_Mundeleer_int_mli:0 "Léon Mundeleer"
+	 Leon_Mundeleer_dead:0 " is incapable of holding any posts."
+	 Leon_Mundeleer_int_fired:0 " is incapable of holding this post."
 	 BEL_Auguste_Buisseret_int_sco:0 "Auguste Buisseret"
 	 Auguste_Buisseret_dead:0 " is incapable of holding any posts."
 	 Auguste_Buisseret_int_fired:0 " is incapable of holding this post."
@@ -4768,9 +4768,9 @@
 	 BEL_Jules_Pire_carm_sde:0 "Jules Pire"
 	 Jules_Pire_dead:0 " is incapable of holding any posts."
 	 Jules_Pire_carm_fired:0 " is incapable of holding this post."
-	 BEL_Yvan_GArard_carm_mli:0 "Yvan GÃ©rard"
-	 Yvan_GArard_dead:0 " is incapable of holding any posts."
-	 Yvan_GArard_carm_fired:0 " is incapable of holding this post."
+	 BEL_Yvan_Gerard_carm_mli:0 "Yvan Gérard"
+	 Yvan_Gerard_dead:0 " is incapable of holding any posts."
+	 Yvan_Gerard_carm_fired:0 " is incapable of holding this post."
 	 BEL_Raoul_van_Overstraeten_carm_sco:0 "Raoul van Overstraeten"
 	 Raoul_van_Overstraeten_dead:0 " is incapable of holding any posts."
 	 Raoul_van_Overstraeten_carm_fired:0 " is incapable of holding this post."
@@ -4780,9 +4780,9 @@
 	 BEL_Leon_Degrelle_carm_npo:0 "Léon Degrelle"
 	 Leon_Degrelle_dead:0 " is incapable of holding any posts."
 	 Leon_Degrelle_carm_fired:0 " is incapable of holding this post."
-	 BEL_RAnA_Lagrou_carm_npo:0 "RÃ©nÃ© Lagrou"
-	 RAnA_Lagrou_dead:0 " is incapable of holding any posts."
-	 RAnA_Lagrou_carm_fired:0 " is incapable of holding this post."
+	 BEL_Rene_Lagrou_carm_npo:0 "Réné Lagrou"
+	 Rene_Lagrou_dead:0 " is incapable of holding any posts."
+	 Rene_Lagrou_carm_fired:0 " is incapable of holding this post."
 
 	### Chief of Navy ###
 	 BEL_Georges_Vereecken_cnav_tot:0 "Georges Vereecken"
@@ -4811,9 +4811,9 @@
 	 BEL_LFE_Wouters_cair_sco:0 "L.F.E. Wouters"
 	 LFE_Wouters_dead:0 " is incapable of holding any posts."
 	 LFE_Wouters_cair_fired:0 " is incapable of holding this post."
-	 BEL_Fritz_LAb_cair_npo:0 "Fritz LÃ¶b"
-	 Fritz_LAb_dead:0 " is incapable of holding any posts."
-	 Fritz_LAb_cair_fired:0 " is incapable of holding this post."
+	 BEL_Fritz_Loeb_cair_npo:0 "Fritz Löb"
+	 Fritz_Loeb_dead:0 " is incapable of holding any posts."
+	 Fritz_Loeb_cair_fired:0 " is incapable of holding this post."
 
   ################################################################################################################################################################################################
   ### BHC
