--- a/localisation/KR_Spain_FAI_l_english.yml
+++ b/localisation/KR_Spain_FAI_l_english.yml
@@ -15,6 +15,11 @@ CNT_oppress_opposition:0 "Crush the Revolution's Enemies"
 CNT_reconcile_opposition:0 "Educate the Masses"
 CNT_home_rule:0 "Autonomous Communities of Iberia"
 
+CNT_advisors_france:0 "French Assistance"
+CNT_advisors_england:0 "English Assistance"
+CNT_advisors_italysoc:0 "Italian Assistance"
+CNT_advisors_soviet:0 "Soviet Assistance"
+
 CNT_industrial_focus:0 "Call for the Workers"
 CNT_industry_focus_1:0 "Plan Rojo"
 CNT_industry_focus_2:0 "Plan Verde"
