--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -25,19 +25,22 @@ SPR_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
 SPR_black_monday:0 "Effects of Black Monday"
-SPR_social_breakdown:0 "A fractured Society"
+SPR_social_breakdown:0 "Fractured Society"
+SPR_social_breakdown_2:0 "Fractured Society"
+SPR_social_breakdown_3:0 "Fractured Society"
+SPR_diplomacy_focus:0 "Diplomacy Focus"
+SPR_economy_focus:0 "Economy Focus"
+SPR_military_focus:0 "Military Focus"
+SPR_new_jobs:0 "Jobs for the People"
+SPR_rally_kingdom:0 "Rally the Kingdom!"
+SPR_new_command:0 "A New Command"
+SPR_propaganda_focus:0 "Radio Madrid"
+SPR_army_production:0 "Spanish Army Production"
+SPR_vitorio_factory:0 "Vitorio Air Factory"
+SPR_air_focus:0 "Rule the Skies"
+SPR_navy_focus:0 "Rule the Seas"
 SPR_portuguese_economic_cooperation:0 "Economic Cooperation with Portugal"
-SPR_italian_economic_cooperation:0 "Economic Cooperation with the Italian Federation"
-
-SPR_cnt_activities_allowed:0 "CNT activities"
-SPR_cnt_activities_banned:0 "CNT activities"
-SPR_car_activities_allowed:0 "Carlist activities"
-SPR_car_activities_banned:0 "Carlist activities"
-
-CNT_advisors_france:0 "French Assistance"
-CNT_advisors_england:0 "English Assistance"
-CNT_advisors_italysoc:0 "Italian Assistance"
-CNT_advisors_soviet:0 "Soviet Assistance"
+SPR_italian_economic_cooperation:0 "Economic Cooperation with Italian Federation"
 SPR_advisors_natfrance:0 "French Assistance"
 SPR_advisors_russia:0 "Russian Assistance"
 SPR_advisors_germany:0 "German Assistance"
