Fengtian events, a little localization stuff

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -27,6 +27,7 @@ FNG_informal_empire_5:0 "Mantetsu Dominance"
 
 ### Tooltips ###
 FNG_expel_japanese_officers_tooltip:0 "Completing this focus will have dire consequences for Fengtian's relationship with Japan. \n"
+FNG_Proclamation_tooltip:0 "Only complete this focus when prepared to begin the Reclamation War within a year. \n"
 
 ###Focus Flags###
 doihara_cigarettes:0 "Doihara's Proposal"
@@ -844,6 +845,14 @@ fengtian.new.99.a:0 ""
 fengtian.new.100.t:0 ""
 fengtian.new.100.d:0 ""
 fengtian.new.100.a:0 ""
+
+fengtian.new.102.t:0 ""
+fengtian.new.102.d:0 ""
+fengtian.new.102.a:0 ""
+
+fengtian.new.103.t:0 ""
+fengtian.new.103.d:0 ""
+fengtian.new.103.a:0 ""
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
