Exported PLC Russian Border Forts Focus to an event chain. Fun!

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -145,7 +145,7 @@ PLC_never_surrender:0 "Never Surrender"
 PLC_trench_warfare:0 "Revisiting Trench Warfare"
 PLC_artillery_focus:0 "Bombardment Focus"
 PLC_moving_fortresses:0 "Mobile Fortresses"
-PLC_russian_forts:0 "Russian Border Forts"
+PLC_russian_forts:0 "Construct Russian Border Forts"
 PLC_holding_our_gains:0 "Construct Urban Arsenals"
 PLC_mobilization:0 "Mobilisation"
 PLC_wartime_rations:0 "Economic Rationing"
@@ -656,6 +656,24 @@ plcommon.78.a:0 "They learned their place."
 plcommon.79.t:0 "Selecting a Prime Minister"
 plcommon.79.d:0 "One of the first actions the new Polish-Lithuanian Commonwealth must take is to elect a Prime Minister to lead the government under our king, Mendog III. However, in the excitement of forming a new nation and the political chaos it entails, there have been many calls to allow the people to vote on the Prime Minister, rather than having him appointed. \n\nWhile we are certainly under no obligation to allow the people to vote, it could cement Mendog's position as a "King of the People"..."
 plcommon.79.a:0 "Mendog's vote is the only one we need."
+plcommon.80.t:0 "The Construction of Fort Vasa"
+plcommon.80.d:0 "Our border with the Russians is small but critically undefended. A section of our military has proposed the construction of a series of defensive structures along the border to secure its defense and ensure we are not taken unawares by a surprise Russian invasion. \n\nThe plan has been drafted, and the series of fortifications are to be collectively named "Fort Vasa" in honor of King Władysław IV Vasa, who defeated the Russians in the Smolensk War. \n\nConstruction is due to begin shortly."
+plcommon.80.a:0 "It will surely go as planned!"
+plcommon.81.t:0 "Unplanned Construction Delays"
+plcommon.81.d:0 "Construction of Fort Vasa has been proceeding, but not without delay. Most recently, four men were killed in an accident involving mining explosives while digging out the tunnels, and another two were killed when a section of concrete collapsed on them. \n\nMorale on the site is low, and the project is unlikely to amount to anything without continued support."
+plcommon.81.a:0 "We must continue."
+plcommon.81.b:0 "What we have now will suffice."
+plcommon.82.t:0 "Fort Vasa Runs out of Funding"
+plcommon.82.d:0 "Even with the continued support of the administration, the construction of Fort Vasa has hit another snag. The original budget had not foreseen the heavy additional costs the project is accruing, and the funding for the fortress has run dry. \n\nMore money could be allocated to the project, but is unlikely to be popular in the capital, a region far from immediate Russian threat."
+plcommon.82.a:0 "Allocate the funds."
+plcommon.82.b:0 "The fortress is complete enough."
+plcommon.83.t:0 "Fort Vasa is Completed"
+plcommon.83.d:0 "Many months of hard labor and far too many unforeseen hurdles later, "Fort Vasa" stands as testament to Polish-Lithuanian engineering, a vast network of bunkers and tunnels covering the entire Russian border, impervious to any assault. \n\nWhile many are busy celebrating the completion of such a powerful military bastion, a small flaw has been discovered in the network. A small portion of the line was left incomplete. In the grand scheme of things, insignificant, however..."
+plcommon.83.a:0 "Enough! It is finished."
+plcommon.83.b:0 "A flaw? Fix it!"
+plcommon.84.t:0 "Fort Vasa is Truly Completed"
+plcommon.84.d:0 "With the final missing section of Fort Vasa completed, the fortress stands triumphant, a shining beacon of Polish-Lithuanian military might. All defensive weaknesses have been accounted for, and some optimistic reports claim it would only need 1000 men to hold off the entire Russian army. \n\nWhatever the case, our Russian border now stands stoically defended. Fort Vasa shall not fall."
+plcommon.84.a:0 "A toast, to our hard workers!"
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
@@ -683,6 +701,11 @@ PLC_national_populist_party_long:0 "The National-Radical Party"
 plc_polish_favor:0 "§RThis option will favour Poland in the makeup of the Commonwealth. This will have consequences.§! \n"
 plc_lithuanian_favor:0 "§RThis option will favour Lithuania in the makeup of the Commonwealth. This will have consequences.§! \n"
 PLC_russian_forts_tooltip:0 "will gain a large fortification on the Russian border.\n"
+PLC_russian_forts_continue:0 "Construction will continue on the fortress...\n"
+PLC_russian_forts_stop_1:0 "Construction of Fort Vasa will cease at §YLevel 1§!. \n"
+PLC_russian_forts_stop_4:0 "Construction of Fort Vasa will cease at §YLevel 4§!. \n"
+PLC_russian_forts_stop_6:0 "Construction of Fort Vasa will cease at §YLevel 6§!. \n"
+PLC_russian_forts_stop_7:0 "Construction of Fort Vasa is now complete at §YLevel 7§!. \n"
 PLC_holding_our_gains_tooltip:0 "will gains city-wide fortifications. \n"
 PLC_coastal_forts_tooltip:0 "will receive extensive coastal fortifications. \n"
 PLC_garrison_training_tooltip:0 "You will train Garrison Troops for your coastal area."
