Added some POL flavor stuff.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1181,6 +1181,9 @@ poland.208.e:0 "Let us choose the Canadian Vickers LT III."
 poland.208.f:0 "Let us choose the Russian T-25."
 poland.208.g:0 "Let us choose the Soviet T-25."
 poland.208.h:0 "Let us create our own design, instead."
+poland.209.t:0 "Signing the Pacta Conventa"
+poland.209.d:0 "A long-standing tradition of the old Polish-Lithuanian Commonwealth, the Pacta Conventa was a contractual agreement between the people of Poland and the newly elected king. These pacts were continuously signed by elected kings from 1573 to 1764 as a sign of good faith on the part of the monarch. This pact affirmed the king's pledges to the nation, and was written uniquely for each king to sign upon election to the Polish throne. \n\nAs a symbolic gesture of King [POL.GetLeader]'s ascencion to the throne, the Sejm has written a new Pacta Conventa for the king to sign. A king has not ruled the polish people for almost 150 years, and many have come to see the king's signing of this document as the de facto beginning of Poland's new age in the modern world."
+poland.209.a:0 "With this signature, a new age begins."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
