--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -90,7 +90,7 @@ PLC_striking_the_balance:0 "A New Capital"
 PLC_lithuania_first:0 "Vilnius as the Capital"
 PLC_the_new_bureaucracy:0 "The Bureaucracy First"
 PLC_solve_racial_tensions:0 "Solve Cultural Tensions"
-PLC_a_unifying_faith:0 "A Unifying Faith"
+PLC_a_unifying_faith:0 "Re-Institute the Warsaw Confederation"
 PLC_a_new_capital:0 "Building the New Capital"
 PLC_expand_vilnius:0 "Expand Vilnius"
 PLC_build_warsaw_palace:0 "The Palace at Warsaw"
@@ -99,17 +99,17 @@ PLC_mendog_iii:0 "The Reign of Mindaugas III of Urach"
 PLC_lithuanian_lead:0 "Lithuanian Leadership"
 PLC_polish_language:0 "The Polish Popular Majority"
 PLC_minority_rights:0 "Minority Guarantees"
-PLC_decentralization:0 "Decentralisation"
+PLC_decentralization:0 "The Principle of Golden Liberty"
 PLC_centralizing_power:0 "Centralising Power"
 PLC_building_the_capital:0 "Improving the Capital"
 PLC_vilnius_warsaw_railway:0 "The Vilnius-Warsaw Railway"
 PLC_an_absolute_monarch:0 "The Absolute Monarch"
 PLC_a_smaller_circle:0 "A Smaller Circle"
-PLC_local_representatives:0 "Local Representatives"
+PLC_local_representatives:0 "Rex regnat et non-gubernat"
 PLC_complete_suffrage:0 "Universal Suffrage"
 PLC_redefining_territories:0 "Redefining Territories"
 PLC_a_common_currency:0 "A Common Currency"
-PLC_a_combined_constitution:0 "A Combined Constitution"
+PLC_a_combined_constitution:0 "Call the Second Great Sejm"
 PLC_mitteleuropa_question:0 "The Mitteleuropa Question"
 PLC_the_revolution:0 "Fires of the Revolution"
 PLC_new_secret_police:0 "The Secret Police"
@@ -122,7 +122,7 @@ PLC_stick_with_germany:0 "Stick with Germany"
 PLC_german_tech_sharing:0 "The Kaiser Wilhelm Society"
 PLC_economic_treaties:0 "Economic Co-operation"
 PLC_german_advisors:0 "German Advisers"
-PLC_our_natural_borders:0 "Expanding to our Natural Borders"
+PLC_our_natural_borders:0 "Reverse the Polish Partitions"
 PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
 PLC_ruthenian_invitation:0 "Ruthenian Referendum"
 PLC_galician_referendum:0 "The Galician Purchase"
@@ -209,7 +209,7 @@ PLC_striking_the_balance_desc:0 "The new Polish-Lithuanian Commonwealth needs a 
 PLC_lithuania_first_desc:0 "The new Polish-Lithuanian Commonwealth needs a new capital. Vilnius is the obvious choice, being the seat of Mindaugas III and the accepted capital of the nation in Mitteleuropa."
 PLC_the_new_bureaucracy_desc:0 "The bureaucracy of the Commonwealth is struggling to cope with the gargantuan task of integrating the governments of two wholly separate nations. We must put every effort into resolving the issues they face and integrating our two governments as quickly as possible."
 PLC_solve_racial_tensions_desc:0 "Despite our best efforts to the contrary, in the uncertainty of our new nation's birth, a mistrust has formed between the Polish and Lithuanian peoples. We must resolve this at once if we are to move forward as one unified state."
-PLC_a_unifying_faith_desc:0 "A common ground can be found in the Catholic majorities of both nations. Even if we cannot all come together in the politics of our nation, we can find common ground in faith. It is not the end of our troubles, but it is a start."
+PLC_a_unifying_faith_desc:0 "The Warsaw Confederation, signed in 1573, was a document that pledged mutual support and tolerance between all religious groups in the union. Re-drafting this historic confederation will have great value both practically and symbolically. Even if we cannot all come together in the politics of our nation, we can find common ground in faith. It is not the end of our troubles, but it is a start."
 PLC_a_new_capital_desc:0 "The new capital contains almost none of the required infrastructure to contain the proper capital of a nation-state. We must rectify this immediately if we are to run the government from this new location."
 PLC_expand_vilnius_desc:0 "Vilnius is as it stands a small city compared to the great seats of power across the globe. We must expand the city so that it can stand proud among the other capitals of Europe."
 PLC_build_warsaw_palace_desc:0 "The seat of J.K.D. Mendog III, the palace at Warsaw stands as a representation of our power and opulence. By expanding and improving the palace, we signal that the new Commonwealth is a nation with the wealth and power to stand among the great powers of our time."
@@ -224,11 +224,11 @@ PLC_building_the_capital_desc:0 "The capital still requires more construction to
 PLC_vilnius_warsaw_railway_desc:0 "The new capital has brought to light how difficult it is to actually travel around the Commonwealth. A new railway connecting the nation's two largest cities would greatly increase the people's ability to travel around the nation."
 PLC_an_absolute_monarch_desc:0 "The collapse of democratic nations around the world has taught us a valuable lesson: rule of the people is a concept doomed to failure. The King's word shall be the final authority on all matters of state."
 PLC_a_smaller_circle_desc:0 "For far too long far too many have had the ear of the king. It is time we cull those with power down to a select few. The more people who have power, the more who will undo the nation to gain more of it."
-PLC_local_representatives_desc:0 "As a part of moving towards a more democratic model of government, it is time to allow the people living in the different parts of the nation to elect their own local representatives to the Sejm, rather than them being appointed from influential members of society. This will increase both our ability to sate the needs of different regions, and include the people more in our political structure."
+PLC_local_representatives_desc:0 "'The King reigns but does not govern.' It is time to allow the people living in the different parts of the nation to elect their own local representatives to the Sejm, rather than them being appointed from influential members of society. This will increase both our ability to sate the needs of different regions, and include the people more in our political structure."
 PLC_complete_suffrage_desc:0 "The right to vote has long been fought over in other nations around the world, but we have to come to our own conclusion. All who are true citizens of the Commonwealth shall be allowed to vote, as a universal right."
 PLC_redefining_territories_desc:0 "One of the problems the bureaucracy faces is the different administrative divisions used by Poland and Lithuania. We must create an entirely new system for defining these territories, so that we may tax and govern them equally."
 PLC_a_common_currency_desc:0 "Combining tow economic systems was never going to be easy, but our new plan to move both nations onto a new economic standard will form the backbone of our economy for years to come."
-PLC_a_combined_constitution_desc:0 "The culmination of our political struggles up to this point, a new constitution will go a long way to marking the end of the uncertainty surrounding our nation's birth."
+PLC_a_combined_constitution_desc:0 "The Great Sejm of 1788 was called shortly before the end of the first Commonwealth with the goal of radically reforming the constitution of the nation and fixing political decay. They were successful, and it time we emulate their success by calling a new Great Sejm to draft another constitution. A new constitution will go a long way to marking the end of the uncertainty surrounding our nation's birth."
 PLC_mitteleuropa_question_desc:0 "Lithuania was member of the Mitteleuropa Alliance. Poland was not. With the combination of our two countries as one, the question remains on whether or not the Polish-Lithuanian Commonwealth will remain in the alliance or attempt to weasel their way out from under Germany's shadow."
 PLC_the_revolution_desc:0 "The flames of the Syndicalist revolution burn bright! The monarchy has been overthrown, the bourgeoisie toppled, and the future seized in the hands of the people! It is time for all men and women to join hands for the Syndicalist cause!"
 PLC_new_secret_police_desc:0 "Even with all true citizens of the Polish-Lithuanian Commune being loyal to the Syndicalist cause, there are still rats who wish nothing more than to see the common man suffering under the weight of the nobility's oppression. The new Ministry of Public Security will see to these insurrectionists."
@@ -241,7 +241,7 @@ PLC_stick_with_germany_desc:0 "The German Empire represents the best opportunity
 PLC_german_tech_sharing_desc:0 "Germany's technological prowess is second to none in Europe, and the Kaiser Wilhelm Society is constantly on the cutting edge of technological advancements. We need to join our technological efforts so that we both may have access to the latest in military technology."
 PLC_economic_treaties_desc:0 "The Mitteleuropa Alliance offers far more beyond simple military defence. The Alliance also allows for one's inclusion into Germany's economic sphere, and by joining, our economy will undoubtedly receive a healthy boost."
 PLC_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our German alliance, we can allow them to send us advisers to modernise our armed forces."
-PLC_our_natural_borders_desc:0 "Even with Poland and Lithuania joining in union, the amount of territory we control pales to the territory held at the height of the old Commonwealth. As it appears that our neighbours will not merely allow us to take their land, we shall seize it by force."
+PLC_our_natural_borders_desc:0 "Even with Poland and Lithuania joining in union, the amount of territory we control pales to the territory held at the height of the old Commonwealth. The Partitions of Poland were a crime against our people, and we must reclaim the lands unjustly stolen from us. As it appears that our neighbours will not merely allow us to take their land, we shall seize it by force."
 PLC_the_greater_commonwealth_desc:0 "It is not through aggressive military action, but rather shrewd diplomacy that will allow us to grow and prosper. We shall adopt a policy of peaceful expansionism, where the pen is mightier than the sword."
 PLC_ruthenian_invitation_desc:0 "The drastic upswing in Polish and Lithuanian nationalism has had an effect even outside of our borders. In Ruthenia, a small but vocal minority has been causing problems for the local authorities in provinces along our mutual border. These voices, while still very small, could prove the political chess piece we need to instigate a border revision with Ruthenia."
 PLC_galician_referendum_desc:0 "The Austrian subject of Galicia-Lodomeria has long been a thorn in Poland's side, a pretender state that often claimed portions of rightful Polish territory. Now, it seems that Galicia may have become a thorn in Austria's side as well. Rumours have spread that Austria may be amenable to a deal with us over Galicia, a deal that will mutually benefit us both."
@@ -361,7 +361,7 @@ plcommon.1.c:0 "Juozas Ambrazevicius, the Lithuanian historian"
 plcommon.1.e:0 "Let the people vote for the Prime Minister"
 plcommon.2.t:0 "The Capital"
 plcommon.2.d:0 "With the rebirth of the Commonwealth we must decide where our capital should be. Historically the Commonwealth was based in Warsaw, but Vilnius could also be used. However, the intense arguments between the Poles and Lithuanians have left many wondering if a compromise is not the best solution. The idea of a new capital has gained popular support recently, and the idea has taken hold. Which city shall become our capital?"
-plcommon.2.a:0 "Lublin!"
+plcommon.2.a:0 "Lublin, the original site of the union!"
 plcommon.2.b:0 "Siauliai!"
 plcommon.2.c:0 "Bialystok!"
 plcommon.3.t:0 "The Head of the Army"
